fix scrolling issues (CSS)
Because of the absolute positioning of the main game area, no scroll bar
was appearing when the window was vertically too short. Also, in
addition, I had overzealously disables scrolling.

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ html, body {
 }
 
 body {
-  overflow: hidden;
+  overflow: auto;
   text-align: center;
 }
 
@@ -40,6 +40,7 @@ body {
 .main {
   margin: 0 auto;
   width: 700px;
+  min-height: 800px;
 }
 
 .right, .wrong {
